--- a/StoneScissorsPaper/StoneScissorsPaper.csproj
+++ b/StoneScissorsPaper/StoneScissorsPaper.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Graphics.cs" />
+    <Compile Include="Phrases.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weapon.cs" />
